Fix: Added alignment classes to image block

--- a/src/block/image/style.scss
+++ b/src/block/image/style.scss
@@ -1,1 +1,6 @@
 @import "common";
+
+.stk-block-image .stk-img-wrapper {
+	margin-left: var(--stk-alignment-margin-left, auto);
+	margin-right: var(--stk-alignment-margin-right, auto);
+}
